--- a/apps/gui/app/language/pt-PT.json
+++ b/apps/gui/app/language/pt-PT.json
@@ -62,6 +62,7 @@
     },
 
     "rtp": {
+      "stream": "Stream",
       "source": "Origem",
       "destination": "Destino",
       "ssrc": "SSRC",
@@ -140,6 +141,7 @@
     "processing_streams": "A processar as Streams...",
     "done": "Concluído",
     "capture_stream": "Gravar Stream",
+    "add_stream": "Adicionar Stream",
     "start_capture": "Iniciar",
     "drop_sdp_file_here": "Arraste para aqui seu ficheiro SDP"
   },
