--- a/docs/ST_2022-7.md
+++ b/docs/ST_2022-7.md
@@ -5,43 +5,38 @@
 When users select the ST2022-7 comparison, they can select the pcap file and the stream within that pcap file that will be the reference stream, as well as the stream that will be compared with it.
 When the processing is complete, users can view the comparison by selecting it from the list on the bottom of the page.
 
-The comparison page shows the information about each stream, as well as the outcome of the comaparison.
+The comparison page shows the information about each stream, as well as the outcome of the comparison.
 
 There are five summary values. The first two of them refer to the amount of data that is present in the selected streams:
 
-- Total
-
-The number of packets in both streams.
-
-- Overlap
-
-The number of packets that overlap in both streams. That is, if one of the captures started earlier in time than the other, those initial packets will not overlap the others.
+| Parameter | Explanation |
+| ------ | ------ |
+| *Total* | The number of packets in both streams. |
+| *Overlap* | The number of packets that overlap in both streams. That is, if one of the captures started earlier in time than the other, those initial packets will not overlap the others. |
 
 The remaining values refer to the result of the comparison of the overlapping packets:
 
-- Different packets
-
-The number of packets that are present but which content is not exacly the same in both streams.
-
-- Missing 
-
-The amount of packets that exist in one stream but are absent from the others.
-
-- Equal
-
-The number of packets that are exactly equal in both streams.
+| Parameter | Explanation |
+| ------ | ------ |
+| *Different packets* | The number of packets that are present but which content is not exacly the same in both streams. |
+| *Missing* | The amount of packets that exist in one stream but are absent from the others. |
+| *Equal* | The number of packets that are exactly equal in both streams. |
 
 ## Algorithm
 
 The first step of the algorithm is to determine the intersection of both streams. This is done using RTP timestamps. Given:
 
-- `Tf(a|b)`: the first RTP timestamp of stream A or B; and, 
-- `Tl(a|b)`: the last RTP timestamp of stream A or B.
+| Parameter | Explanation |
+| ------ | ------ |
+| `Tf(a|b)`| the first RTP timestamp of stream A or B. |
+| `Tl(a|b)`| the last RTP timestamp of stream A or B.  |
 
 Then:
 
-- Initial timestamp: `Ti  = max(Tfa, Tfb)`
-- Final timestamp: `Tf = min(Tla, Tlb)`
+| Parameter | Explanation |
+| ------ | ------ |
+| Initial timestamp | `Ti  = max(Tfa, Tfb)` |
+| Final timestamp | `Tf = min(Tla, Tlb)` |
 
 Therefore, only packets with RTP TS between (Ti, Tf) will be accounted for in the comparison.
 
